done except pagination

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -93,7 +93,7 @@
                             <nav class="mean-nav" *ngIf="mobileMenuOpen" [@mobileMenuAnimation]="'displayMobileMenu'">
                               <ul>
                                   <li><a (click)="mobileMenuOpen = false; navbarMobileOpen = false;" routerLink="/" style="font-size: 16px; color: #666666;">Ana Sayfa</a></li>
-                                  <li><a (click)="mobileMenuOpen = false; navbarMobileOpen = false;" href="politic.html" style="font-size: 16px; color: #666666;">Avukata Danışın</a></li>
+                                  <li><a (click)="mobileMenuOpen = false; navbarMobileOpen = false;" routerLink="/avukata-danisin" style="font-size: 16px; color: #666666;">Avukata Danışın</a></li>
                                   <li><a (click)="mobileMenuOpen = false; navbarMobileOpen = false;" routerLink="/yayinlar/hakaret/sayfa/1" style="font-size: 16px; color: #666666;">Hakaret</a></li>
                                   <li><a (click)="mobileMenuOpen = false; navbarMobileOpen = false;" routerLink="/yayinlar/yaralama/sayfa/1" style="font-size: 16px; color: #666666;">Yaralama</a></li>
                                   <li><a (click)="mobileMenuOpen = false; navbarMobileOpen = false;" routerLink="/yayinlar/orgutsuclari/sayfa/1" style="font-size: 16px; color: #666666;">Örgüt Suçları</a></li>
