--- a/src/app/mainmakaleler/mainmakaleler.component.html
+++ b/src/app/mainmakaleler/mainmakaleler.component.html
@@ -36,31 +36,28 @@
 
 
 <!-- Here is pagination... -->
-<div class="row mt-10">
+<div *ngIf="kategori" class="row mt-10">
     <div class="col-xl-12">
         <div class="pagination">
             <ul>
+
                 <li>
                     <a href="#">Prev</a>
                 </li>
+
+
                 <li class="active">
                     <a href="#">
                         <span>1</span>
                     </a>
                 </li>
-                <li>
-                    <a href="#">
-                        <span>2</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <span>3</span>
-                    </a>
-                </li>
+
+
+
                 <li>
                     <a href="#">Next</a>
                 </li>
+
             </ul>
         </div>
     </div>
