--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -7,7 +7,7 @@
             <div *ngIf="iFirst === 0" class="col-lg-6 col-md-12">
                 <div class="hero pos-relative mb-30">
                     <div class="hero__thumb" data-overlay="dark-gradient">
-                        <a [routerLink]="['/yayinlar/', firstArticle.id, firstArticle.makale_slug]"><img src="{{ environment.apiEndpoint + 'media/' + firstArticle.image625x400 }}" alt="hero image"></a>
+                        <a [routerLink]="['/yayinlar/', firstArticle.id, firstArticle.makale_slug]"><img src="{{ environment.apiEndpoint + 'media/' + firstArticle.image625x400 }}" alt="{{ firstArticle.makale_baslik}}"></a>
                     </div>
                     <div class="hero__text">
                         <span class="post-cat mb-10"><a [routerLink]="['/yayinlar/', firstArticle.id, firstArticle.makale_slug]">{{ firstArticle.makale_kategori }}</a></span>
@@ -19,7 +19,7 @@
                 <div class="hero pos-relative mb-30">
                     <div class="hero__thumb" data-overlay="dark-gradient">
                         <a [routerLink]="['/yayinlar/', firstArticle.id, firstArticle.makale_slug]">
-                            <img src="{{ environment.apiEndpoint + 'media/' + firstArticle.image297x400 }}" alt="hero image">
+                            <img src="{{ environment.apiEndpoint + 'media/' + firstArticle.image297x400 }}" alt="{{ firstArticle.makale_baslik }}">
                         </a>
                     </div>
                     <div class="hero__text hero__text-small">
@@ -36,7 +36,7 @@
                 <div class="hero pos-relative mb-30">
                     <div class="hero__thumb" data-overlay="dark-gradient">
                         <a [routerLink]="['/yayinlar/', firstArticle.id, firstArticle.makale_slug]">
-                            <img src="{{ environment.apiEndpoint + 'media/' + firstArticle.image297x400 }}" alt="hero image">
+                            <img src="{{ environment.apiEndpoint + 'media/' + firstArticle.image297x400 }}" alt="{{ firstArticle.makale_baslik }}">
                         </a>
                     </div>
                     <div class="hero__text hero__text-small">
@@ -77,7 +77,7 @@
                 <div *ngIf="iUyusturucu < 3" class="postbox mb-25">
                     <div class="postbox__thumb">
                         <a [routerLink]="['/yayinlar/', uyusturucuItem.id, uyusturucuItem.makale_slug]">
-                            <img src="{{ environment.apiEndpoint + 'media/' + uyusturucuItem.image240x160 }}" alt="hero image">
+                            <img src="{{ environment.apiEndpoint + 'media/' + uyusturucuItem.image240x160 }}" alt="{{ uyusturucuItem.makale_baslik }}">
                         </a>
                     </div>
                     <div class="postbox__text pt-10">
@@ -142,7 +142,7 @@
                 <div class="post__small mb-30">
                     <div class="post__small-thumb f-left">
                         <a [routerLink]="['/yayinlar/', smallItem.id, smallItem.makale_slug]">
-                            <img src="{{ environment.apiEndpoint + 'media/' + smallItem.image100x85 }}" alt="hero image">
+                            <img src="{{ environment.apiEndpoint + 'media/' + smallItem.image100x85 }}" alt="{{ smallItem.makale_baslik }}">
                         </a>
                     </div>
                     <div class="post__small-text fix pl-10">
@@ -405,8 +405,8 @@
     </div>
     <div class="col-xl-6 col-lg-12">
       <div class="app-store text-center text-xl-right">
-        <img class="mr-2 mb-1" src="assets/img/store/apple.png" alt="apple store app">
-        <img src="assets/img/store/google.png" alt="play store app">
+        <img class="mr-2 mb-1" src="assets/img/store/apple.png" alt="app store uygulaması">
+        <img src="assets/img/store/google.png" alt="play store uygulaması">
       </div>
     </div>
   </div>
