ready for production at the port of 4500

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -76,7 +76,7 @@
                                           <li><a routerLink="/yayinlar/hakaret/sayfa/1" class="submenu-item" style="font-size: 16px; color: #333333;">Hakaret Suçları</a></li>
                                           <li><a routerLink="/yayinlar/orgutsuclari/sayfa/1" class="submenu-item" style="font-size: 16px; color: #333333;">Örgüt Suçları</a></li>
                                           <li><a routerLink="/yayinlar/yaralama/sayfa/1" class="submenu-item" style="font-size: 16px; color: #333333;">Yaralama Suçu</a></li>
-                                          <li><a routerLink="/yayinlar/uyusturucumaddesuclari/sayfa/1" class="submenu-item" style="font-size: 16px; color: #333333;">Yasak Madde Suçları</a></li>
+                                          <li><a routerLink="/yayinlar/uyusturucumaddesuclari/sayfa/1" class="submenu-item" style="font-size: 16px; color: #333333;">Uyuşturucu Madde Suçları</a></li>
                                           <li><a routerLink="/yayinlar/beyazyakalisuclari/sayfa/1" class="submenu-item" style="font-size: 16px; color: #333333;">Beyaz Yakalı Suçları</a></li>
                                         </ul>
                                     </li>
@@ -102,7 +102,7 @@
                                           <li *ngIf="uzmanliklarOpened" [@mobileMenuAnimation]="'displayMobileMenu'"><a (click)="mobileMenuOpen = false; navbarMobileOpen = false;" routerLink="/yayinlar/hakaret/sayfa/1" style="font-size: 16px; color: #333333;">Hakaret Suçları</a></li>
                                           <li *ngIf="uzmanliklarOpened" [@mobileMenuAnimation]="'displayMobileMenu'"><a (click)="mobileMenuOpen = false; navbarMobileOpen = false;" routerLink="/yayinlar/orgutsuclari/sayfa/1" style="font-size: 16px; color: #333333;">Örgüt Suçları</a></li>
                                           <li *ngIf="uzmanliklarOpened" [@mobileMenuAnimation]="'displayMobileMenu'"><a (click)="mobileMenuOpen = false; navbarMobileOpen = false;" routerLink="/yayinlar/yaralama/sayfa/1" style="font-size: 16px; color: #333333;">Yaralama Suçu</a></li>
-                                          <li *ngIf="uzmanliklarOpened" [@mobileMenuAnimation]="'displayMobileMenu'"><a (click)="mobileMenuOpen = false; navbarMobileOpen = false;" routerLink="/yayinlar/uyusturucumaddesuclari/sayfa/1" style="font-size: 16px; color: #333333;">Yasak Madde Suçları</a></li>
+                                          <li *ngIf="uzmanliklarOpened" [@mobileMenuAnimation]="'displayMobileMenu'"><a (click)="mobileMenuOpen = false; navbarMobileOpen = false;" routerLink="/yayinlar/uyusturucumaddesuclari/sayfa/1" style="font-size: 16px; color: #333333;">Uyuşturucu Madde Suçları</a></li>
                                           <li *ngIf="uzmanliklarOpened" [@mobileMenuAnimation]="'displayMobileMenu'"><a (click)="mobileMenuOpen = false; navbarMobileOpen = false;" routerLink="/yayinlar/beyazyakalisuclari/sayfa/1" style="font-size: 16px; color: #333333;">Beyaz Yakalı Suçları</a></li>
                                       </ul>
                                   <a (click)="changeUzmanliklarSubMenu()" class="mean-expand" style="font-size: 18px; color: #666666; cursor: pointer;">+</a></li>
