--- a/src/app/makaledetay/makaledetay.component.html
+++ b/src/app/makaledetay/makaledetay.component.html
@@ -63,7 +63,7 @@
        <!-- also-like -->
       <div class="also-like mt-30">
           <div class="section-title mb-30">
-              <h2>You may also like</h2>
+              <h2>İLGİLİ YAYINLAR</h2>
           </div>
           <div class="row">
 
@@ -71,7 +71,7 @@
               <div *ngIf="iPrevNext < 3" class="col-lg-4 col-md-4">
                   <div class="postbox mb-30">
                       <div class="postbox__thumb">
-                          <a href="#">
+                          <a [routerLink]="['/yayinlar', prevNext && prevNext.id, prevNext && prevNext.makale_slug]">
                               <img class="img-100" src="{{ environment.apiEndpoint + 'media/' + prevNext.image240x160 }}" alt="hero image">
                           </a>
                       </div>
@@ -80,7 +80,7 @@
                               <ul>
                                   <li>
                                       <i class="fas fa-calendar-alt"></i>
-                                      <span>{{ prevNext.makale_baslik }}</span>
+                                      <span>{{ prevNext.makale_yayintarihi }}</span>
                                   </li>
 
                               </ul>
